Reader class updated; Dependency (gson) from pom.xml removed; Dependencies (jackson-databind, jackson-core) in pom.xml added; BookRepository singleton added; Booklist.txt path changed; https://jira.is-academy.pl/browse/JJDD9DT-5